Add navigation bar and styling updates to index.html and output.css

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./output.css" />
   </head>
   <body class="bg-verde-800 font-sans">
+    <!-- CLIMA  -->
     <div class="container flex justify-center md:justify-start mt-4">
       <div class="inline-flex items-center rounded-md bg-verde-900">
         <span
@@ -22,5 +23,40 @@
         </div>
       </div>
     </div>
+
+    <header class="container">
+      <nav class="flex justify-between items-center gap-8 py-8">
+        <a href="/">
+          <img src="/img/forest.svg" alt="Logo Forest" />
+        </a>
+
+        <ul class="flex flex-wrap gap-6 text-xl text-white">
+          <li>
+            <a
+              href="#acomodacoes"
+              class="hover:underline hover:underline-offset-8"
+              >Acomodações</a
+            >
+          </li>
+          <li>
+            <a href="#eventos" class="hover:underline hover:underline-offset-8"
+              >Eventos</a
+            >
+          </li>
+          <li>
+            <a
+              href="#experiencias"
+              class="hover:underline hover:underline-offset-8"
+              >Experiências</a
+            >
+          </li>
+          <li>
+            <a href="#contato" class="hover:underline hover:underline-offset-8"
+              >Contato</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
