Add experiences section to index.html and enhance output.css with new utility classes and animations

--- a/src/index.html
+++ b/src/index.html
@@ -263,5 +263,399 @@
         </div>
       </div>
     </section>
+
+    <!-- EXPERIÊNCIAS  -->
+
+    <section
+      id="experiencias"
+      class="container mb-12 sm:mb-16 grid sm:grid-cols-2 gap-8"
+    >
+      <div class="bg-verde-900 p-6 sm:p-8 rounded-xl">
+        <p
+          class="uppercase mb-4 text-start text-verde-200 tracking-widest text-sm"
+        >
+          Experiências Exclusivas
+        </p>
+
+        <h2
+          class="text-start capitalize text-white text-3xl sm:text-4xl lg:text-5xl mb-8 text-balance font-serif"
+        >
+          Escolha sua próxima aventura
+        </h2>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-all"
+        >
+          Observação Noturna
+        </h3>
+        <p class="mb-8 text-balance text-gray-300 pl-10">
+          Explore a vida selvagem em seu habitat natural sob as estrelas.
+        </p>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-all"
+        >
+          Vida Selvagem
+        </h3>
+        <p class="mb-8 text-balance text-gray-300 pl-10">
+          Observe a vida selvagem em seu habitat natural.
+        </p>
+        <h3
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-all"
+        >
+          Canoagem
+        </h3>
+        <p class="mb-8 text-balance text-gray-300 pl-10">
+          Consquite novos horizontes com nossa equipe especializada
+        </p>
+      </div>
+
+      <div class="grid max-sm:grid-cols-1 grid-cols-2 gap-4">
+        <div class="relative cursor-pointer overflow-hidden rounded-xl group">
+          <img
+            src="/img/canoagem.jpg"
+            alt="Canoagem"
+            class="size-full object-cover group-hover:scale-110 transition-all"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 group-hover:opacity-100 transition-all"
+          >
+            <span class="text-white">Canoagem</span>
+          </div>
+        </div>
+        <div
+          class="relative cursor-pointer overflow-hidden rounded-xl group sm:row-span-2"
+        >
+          <img
+            src="/img/observacao-noturna.jpg"
+            alt="Observação Noturna"
+            class="size-full object-cover group-hover:scale-110 transition-all"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 group-hover:opacity-100 transition-all"
+          >
+            <span class="text-white">Observação Noturna</span>
+          </div>
+        </div>
+        <div class="relative cursor-pointer overflow-hidden rounded-xl group">
+          <img
+            src="/img/vida-selvagem.jpg"
+            alt="Vida selvagem"
+            class="size-full object-cover group-hover:scale-110 transition-all"
+          />
+          <div
+            class="absolute flex items-end p-4 inset-0 bg-gradient-to-t from-verde-950/80 opacity-0 group-hover:opacity-100 transition-all"
+          >
+            <span class="text-white">Vida Selvagem</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="container mb-12 sm:mb-16 sm:py-16 bg-[url('/img/padrao.svg')] bg-contain bg-center bg-no-repeat"
+    >
+      <p
+        class="uppercase mb-4 text-start text-verde-200 tracking-widest text-sm"
+      >
+        Ciclo Natural
+      </p>
+
+      <h2
+        class="text-start capitalize text-white text-3xl sm:text-4xl lg:text-5xl mb-8 text-balance font-serif"
+      >
+        Ritmo da Floresta
+      </h2>
+
+      <div class="flex flex-col sm:flex-row gap-4 sm:gap-8">
+        <div
+          class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
+        >
+          <div
+            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
+          >
+            <img src="/img/manha.svg" alt="Amanhecer" class="" />
+          </div>
+          <h3 class="font-serif text-2xl text-white">Amanhecer</h3>
+          <p class="text-gray-300">
+            Desperte com o canto dos pássaros e participe das nossas caminhadas
+            ao ar livre.
+          </p>
+          <span class="text-verde-300">05:30 - 07:00</span>
+        </div>
+
+        <div
+          class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:translate-y-12 sm:hover:translate-y-10 transition-transform"
+        >
+          <div
+            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
+          >
+            <img src="/img/dia.svg" alt="Amanhecer" class="" />
+          </div>
+          <h3 class="font-serif text-2xl text-white">Meio-dia</h3>
+          <p class="text-gray-300">
+            Explore nossas trilhas sombreadas e desfrute de um piquenique
+            gourmet na natureza.
+          </p>
+          <span class="text-verde-300">12:00 - 14:00</span>
+        </div>
+
+        <div
+          class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
+        >
+          <div
+            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
+          >
+            <img src="/img/noite.svg" alt="Amanhecer" class="" />
+          </div>
+          <h3 class="font-serif text-2xl text-white">Anoitecer</h3>
+          <p class="text-gray-300">
+            Termine seu dia com nossa sessão de observação das estrelas.
+          </p>
+          <span class="text-verde-300">19:00 - 21:00</span>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTATO  -->
+    <section
+      id="contato"
+      class="container mb-12 sm:mb-16 grid lg:grid-cols-2 gap-8"
+    >
+      <div>
+        <h2 class="font-serif text-4xl text-verde-300 mb-4">Nossos Contatos</h2>
+        <p class="text-gray-200 text-balance mb-8">
+          Tem interesse em passar uma temporada na Forest? Entre em contato com
+          a gente por telefone ou email.
+        </p>
+        <div>
+          <div class="grid gap-4">
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <h3 class="mb-2 text-2xl text-verde-300 font-serif">Base</h3>
+            <p class="text-gray-300">
+              Rua da Mata, 123 - Floresta Nacional - RJ
+            </p>
+          </div>
+
+          <div>
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <h3 class="mb-2 text-2xl text-verde-300 font-serif">Email</h3>
+            <p class="text-gray-300">Contato@forest.com</p>
+          </div>
+
+          <div>
+            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <h3 class="mb-2 text-2xl text-verde-300 font-serif">Telefone</h3>
+            <p class="text-gray-300">21 99999-9999</p>
+          </div>
+        </div>
+      </div>
+      <form
+        action=""
+        class="grid gap-4 rounded-xl bg-verde-900 shadow-2xl p-4 lg:p-8"
+      >
+        <div class="grid gap-1">
+          <label for="nome" class="text-white">Nome</label>
+          <input
+            type="text"
+            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500"
+            placeholder="João da Silva"
+          />
+
+          <label for="E-mail" class="text-white">E-mail</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500"
+            placeholder="João@email.com"
+          />
+
+          <label for="telefone" class="text-white">Telefone</label>
+          <input
+            type="text"
+            name="telefone"
+            id="telefone"
+            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500"
+            placeholder="1199999-9999"
+          />
+
+          <label for="mensagem" class="text-white">Mensagem</label>
+          <textarea
+            type="text"
+            name="mensagem"
+            id="mensagem"
+            rows="5"
+            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500 resize-none mb-4"
+            placeholder="Mensagem"
+          ></textarea>
+          <button
+            class="place-self-start rounded-full bg-verde-400 text-verde-900 py-2 px-4 inline-block"
+          >
+            Enviar email
+          </button>
+        </div>
+      </form>
+    </section>
+
+    <!-- PARCEIROS  -->
+
+    <section class="py-4 mb-12 sm:mb-16">
+      <div
+        class="w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-128px),transparent_100%)]"
+      >
+        <ul
+          class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll"
+        >
+          <li>
+            <img
+              src="/img/parceiros/caravan.svg"
+              alt="Caravan"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img src="/img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/wildbeast.svg"
+              alt="wildbeast"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/lescone.svg"
+              alt="Lescone"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/surfbot.svg"
+              alt="Surfbot"
+              class="max-h-8"
+            />
+          </li>
+        </ul>
+
+        <ul
+          class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll"
+          aria-hidden="true"
+        >
+          <li>
+            <img
+              src="/img/parceiros/caravan.svg"
+              alt="Caravan"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img src="/img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/wildbeast.svg"
+              alt="wildbeast"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/lescone.svg"
+              alt="Lescone"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/surfbot.svg"
+              alt="Surfbot"
+              class="max-h-8"
+            />
+          </li>
+        </ul>
+
+        <ul
+          class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-infinite-scroll"
+          aria-hidden="true"
+        >
+          <li>
+            <img
+              src="/img/parceiros/caravan.svg"
+              alt="Caravan"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img src="/img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/wildbeast.svg"
+              alt="wildbeast"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/lescone.svg"
+              alt="Lescone"
+              class="max-h-8"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/parceiros/surfbot.svg"
+              alt="Surfbot"
+              class="max-h-8"
+            />
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <footer class="container pb-8">
+      <div
+        class="bg-verde-900 p-6 sm:p-12 rounded-2xl mb-8 grid gap-8 lg:grid-cols-2"
+      >
+        <div class="flex flex-col gap-4 sm:flex-row sm:gap-12">
+          <div>
+            <h4 class="text-white font-serif text-xl mb-4">Endereço</h4>
+            <p class="text-gray-300">
+              Rua da Mata, 123 <br />Floresta Nacional <br />
+              Rio de Janeiro, RJ
+            </p>
+          </div>
+
+          <div>
+            <h4 class="text-white font-serif text-xl mb-4">Contato</h4>
+            <p class="text-gray-300">contato@forest.com <br />21 99999-9999</p>
+          </div>
+        </div>
+
+        <div class="lg:justify-self-end">
+          <img src="/img/forest.svg" alt="Forest" class="mb-4" />
+          <p class="text-gray-300">Conecte-se com a natureza</p>
+        </div>
+      </div>
+      <div
+        class="text-gray-400 flex flex-col-reverse sm:flex-row items-center justify-between"
+      >
+        <p class="text-sm">&copy; 2026 Forest. Todos os direitos reservados.</p>
+        <ul class="flex gap-8 mb-4 sm:mb-0">
+          <li>
+            <a href="#" class="hover:text-verde-300">Instagram</a>
+          </li>
+
+          <li>
+            <a href="#" class="hover:text-verde-300">LinkedIn</a>
+          </li>
+
+          <li>
+            <a href="#" class="hover:text-verde-300">Facebook</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
