--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,24 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-BR" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" type="image/png" />
     <title>Forest</title>
     <link rel="stylesheet" href="./output.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Text&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="bg-verde-800 font-sans">
     <!-- CLIMA  -->
     <div class="container flex justify-center md:justify-start mt-4">
       <div class="inline-flex items-center rounded-md bg-verde-900">
-        <span
-          class="size-2 bg-verde-300 block rounded-full relative -left-1"
-        ></span>
+        <span class="neon size-2 block relative -left-1"></span>
         <div
           class="flex text-verde-300 divide-x-2 divide-verde-800 [&>div]:px-4 [&>div]:py-2"
         >
@@ -25,39 +30,64 @@
     </div>
 
     <!-- MENU  -->
-    <header class="container">
-      <nav class="flex justify-between items-center gap-8 py-8">
-        <a href="/">
-          <img src="/img/forest.svg" alt="Logo Forest" />
-        </a>
-
-        <ul class="flex flex-wrap gap-6 text-xl text-white">
-          <li>
+    <header class="container flex items-center justify-between gap-8 py-8">
+      <a href="./">
+        <img src="/img/forest.svg" alt="Forest" />
+      </a>
+      <nav
+        id="mobile-menu"
+        class="lg:block hidden items-center z-40 max-lg:fixed max-lg:w-full max-lg:inset-0"
+      >
+        <div
+          class="fixed lg:hidden inset-0 bg-verde-950/40 backdrop-blur-md"
+        ></div>
+        <ul
+          class="text-white text-2xl max-lg:divide-y-2 max-lg:divide-white/10 max-lg:z-50 max-lg:absolute max-lg:p-8 max-lg:w-full lg:text-xl lg:flex lg:flex-wrap lg:gap-8"
+        >
+          <li class="animate-slide-in opacity-0 animate-1">
             <a
+              class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 lg:hover:underline lg:hover:underline-offset-8"
               href="#acomodacoes"
-              class="hover:underline hover:underline-offset-8"
               >Acomodações</a
             >
           </li>
-          <li>
-            <a href="#eventos" class="hover:underline hover:underline-offset-8"
+          <li class="animate-slide-in opacity-0 animate-2">
+            <a
+              class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 lg:hover:underline lg:hover:underline-offset-8"
+              href="#eventos"
               >Eventos</a
             >
           </li>
-          <li>
+          <li class="animate-slide-in opacity-0 animate-3">
             <a
+              class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 lg:hover:underline lg:hover:underline-offset-8"
               href="#experiencias"
-              class="hover:underline hover:underline-offset-8"
               >Experiências</a
             >
           </li>
-          <li>
-            <a href="#contato" class="hover:underline hover:underline-offset-8"
+          <li class="animate-slide-in opacity-0 animate-4">
+            <a
+              class="p-4 lg:px-0 lg:py-2 block max-lg:hover:bg-white/10 lg:hover:underline lg:hover:underline-offset-8"
+              href="#contato"
               >Contato</a
             >
           </li>
         </ul>
       </nav>
+
+      <button
+        id="mobile-button"
+        class="btn flex items-center gap-3 text-verde-900 py-2 px-4 rounded-full lg:hidden"
+      >
+        Menu
+        <span
+          class="h-3 w-4 flex flex-col justify-between *:h-0.5 *:rounded-md *:bg-verde-800"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </span>
+      </button>
     </header>
 
     <!-- MAIN  -->
@@ -65,21 +95,31 @@
       <div
         class="text-white pt-12 bg-gradient-to-t from-verde-950/80 px-4 pb-8 relative rounded-2xl overflow-hidden sm:pt-64 sm:px-8"
       >
-        <img
+        <!-- <img
           src="/img/floresta.jpg"
           alt="Floresta"
           class="absolute inset-0 -z-10 size-full object-cover"
-        />
+        /> -->
+
+        <video
+          src="/img/video_chuva.mp4"
+          class="absolute inset-0 -z-10 size-full object-cover animate-fade-in"
+          id="video"
+          width="1289"
+          height="720"
+          autoplay
+          muted
+          playsinline
+          loop
+        ></video>
 
         <div
           class="flex flex-col items-start gap-2 p-4 justify-between mb-8 rounded-xl bg-verde-950/60 sm:items-center sm:gap-8 sm:py-1 sm:pr-1 sm:pl-4 sm:bg-verde-950 sm:inline-flex sm:flex-row sm:rounded-full"
         >
           <p>Vagas para dezembro abertas</p>
-          <button
-            class="rounded-full bg-verde-400 text-verde-900 py-2 px-4 inline-block"
-          >
-            Reserve hoje >
-          </button>
+          <a href="#contato" class="btn inline-flex items-center gap-2"
+            >Reserve hoje <img src="/img/seta.svg" alt="Seta"
+          /></a>
         </div>
 
         <h1
@@ -120,7 +160,7 @@
     <!-- ACOMODAÇÕES  -->
     <section
       id="acomodacoes"
-      class="container grid gap-8 pt-16 mb-12 sm:mb-16 lg:grid-cols-[2fr_3fr]"
+      class="radial-gradient container grid gap-8 pt-16 mb-12 sm:mb-16 lg:grid-cols-[2fr_3fr]"
     >
       <div
         class="bg-[url('/img/padrao.svg')] bg-no-repeat bg-contain bg-left-bottom content-end"
@@ -132,11 +172,15 @@
         <ul
           class="text-gray-200 grid gap-4 sm:text-xl *:flex *:items-center *:gap-4"
         >
-          <li><span></span>Experimente a natureza de perto</li>
-          <li><span></span>Conecte-se com a natureza</li>
-          <li><span></span>Desconecte-se do digital</li>
-          <li><span></span>Observe a vida selvagem</li>
-          <li><span></span>Escolha a sua cabine preferida</li>
+          <li>
+            <span class="neon h-0.5 w-6"></span>Experimente a natureza de perto
+          </li>
+          <li><span class="neon h-0.5 w-6"></span>Conecte-se com a natureza</li>
+          <li><span class="neon h-0.5 w-6"></span>Desconecte-se do digital</li>
+          <li><span class="neon h-0.5 w-6"></span>Observe a vida selvagem</li>
+          <li>
+            <span class="neon h-0.5 w-6"></span>Escolha a sua cabine preferida
+          </li>
         </ul>
       </div>
 
@@ -214,7 +258,7 @@
             </p>
             <a
               href="#contato"
-              class="justify-self-start self-end rounded-full bg-verde-400 text-verde-900 py-2 px-4 inline-block"
+              class="justify-self-start self-end btn inline-block"
               >Reservar 23/03</a
             >
           </div>
@@ -235,7 +279,7 @@
             </p>
             <a
               href="#contato"
-              class="justify-self-start self-end rounded-full bg-verde-400 text-verde-900 py-2 px-4 inline-block"
+              class="justify-self-start self-end btn inline-block"
               >Reservar 15/04</a
             >
           </div>
@@ -256,7 +300,7 @@
             </p>
             <a
               href="#contato"
-              class="justify-self-start self-end rounded-full bg-verde-400 text-verde-900 py-2 px-4 inline-block"
+              class="justify-self-start self-end rounded-full btn inline-block"
               >Reservar 18/08</a
             >
           </div>
@@ -283,7 +327,7 @@
           Escolha sua próxima aventura
         </h2>
         <h3
-          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-all"
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:neon hover:before:w-10 before:transition-all"
         >
           Observação Noturna
         </h3>
@@ -291,7 +335,7 @@
           Explore a vida selvagem em seu habitat natural sob as estrelas.
         </p>
         <h3
-          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-all"
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:neon hover:before:w-10 before:transition-all"
         >
           Vida Selvagem
         </h3>
@@ -299,7 +343,7 @@
           Observe a vida selvagem em seu habitat natural.
         </p>
         <h3
-          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:bg-verde-400 hover:before:w-10 before:transition-all"
+          class="text-white text-xl flex items-center gap-4 before:h-0.5 before:w-6 before:neon hover:before:w-10 before:transition-all"
         >
           Canoagem
         </h3>
@@ -369,9 +413,7 @@
         <div
           class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
         >
-          <div
-            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
-          >
+          <div class="neon size-10 flex items-center justify-center">
             <img src="/img/manha.svg" alt="Amanhecer" class="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Amanhecer</h3>
@@ -385,9 +427,7 @@
         <div
           class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:translate-y-12 sm:hover:translate-y-10 transition-transform"
         >
-          <div
-            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
-          >
+          <div class="neon size-10 flex items-center justify-center">
             <img src="/img/dia.svg" alt="Amanhecer" class="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Meio-dia</h3>
@@ -401,9 +441,7 @@
         <div
           class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
         >
-          <div
-            class="bg-verde-400 size-10 flex items-center justify-center rounded-full"
-          >
+          <div class="neon size-10 flex items-center justify-center">
             <img src="/img/noite.svg" alt="Amanhecer" class="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Anoitecer</h3>
@@ -428,7 +466,7 @@
         </p>
         <div>
           <div class="grid gap-4">
-            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <span class="h-0.5 w-6 neon inline-block"></span>
             <h3 class="mb-2 text-2xl text-verde-300 font-serif">Base</h3>
             <p class="text-gray-300">
               Rua da Mata, 123 - Floresta Nacional - RJ
@@ -436,13 +474,13 @@
           </div>
 
           <div>
-            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <span class="h-0.5 w-6 neon inline-block"></span>
             <h3 class="mb-2 text-2xl text-verde-300 font-serif">Email</h3>
             <p class="text-gray-300">Contato@forest.com</p>
           </div>
 
           <div>
-            <span class="h-0.5 w-6 bg-verde-400 inline-block"></span>
+            <span class="h-0.5 w-6 neon inline-block"></span>
             <h3 class="mb-2 text-2xl text-verde-300 font-serif">Telefone</h3>
             <p class="text-gray-300">21 99999-9999</p>
           </div>
@@ -454,18 +492,14 @@
       >
         <div class="grid gap-1">
           <label for="nome" class="text-white">Nome</label>
-          <input
-            type="text"
-            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500"
-            placeholder="João da Silva"
-          />
+          <input type="text" class="input" placeholder="João da Silva" />
 
           <label for="E-mail" class="text-white">E-mail</label>
           <input
             type="email"
             name="email"
             id="email"
-            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500"
+            class="input"
             placeholder="João@email.com"
           />
 
@@ -474,7 +508,7 @@
             type="text"
             name="telefone"
             id="telefone"
-            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500"
+            class="input"
             placeholder="1199999-9999"
           />
 
@@ -484,12 +518,10 @@
             name="mensagem"
             id="mensagem"
             rows="5"
-            class="rounded-md border-2 border-verde-800 bg-verde-800 p-2 text-white focus:outline-none focus:ring-2 focus:ring-verde-400 focus:border-verde-900 placeholder:text-gray-500 resize-none mb-4"
+            class="input resize-none mb-4"
             placeholder="Mensagem"
           ></textarea>
-          <button
-            class="place-self-start rounded-full bg-verde-400 text-verde-900 py-2 px-4 inline-block"
-          >
+          <button class="place-self-start btn inline-block">
             Enviar email
           </button>
         </div>
@@ -643,15 +675,15 @@
       >
         <p class="text-sm">&copy; 2026 Forest. Todos os direitos reservados.</p>
         <ul class="flex gap-8 mb-4 sm:mb-0">
-          <li>
+          <li class="hover:-translate-y-0.5 hover:transition-transform">
             <a href="#" class="hover:text-verde-300">Instagram</a>
           </li>
 
-          <li>
+          <li class="hover:-translate-y-0.5 hover:transition-transform">
             <a href="#" class="hover:text-verde-300">LinkedIn</a>
           </li>
 
-          <li>
+          <li class="hover:-translate-y-0.5 hover:transition-transform">
             <a href="#" class="hover:text-verde-300">Facebook</a>
           </li>
         </ul>
@@ -659,3 +691,38 @@
     </footer>
   </body>
 </html>
+
+<script>
+  const video = document.getElementById('video');
+  const temperatura = document.getElementById('temperatura');
+  const tempo = document.getElementById('tempo');
+  const dia = document.getElementById('dia');
+
+  const random = Math.floor(Math.random() * 10) + 20;
+
+  temperatura.innerText = `${random}º`;
+
+  tempo.innerText = random < 25 ? `🌧️ ${random + 12}%` : `🌞`;
+
+  const date = new Date();
+  dia.innerText = date
+    .toLocaleDateString('pt-BR', {
+      weekday: 'long',
+    })
+    .replace('-feira', '');
+
+  video.src = random < 25 ? `/img/video_chuva.mp4` : `/img/video_sol.mp4`;
+
+  const mobileButton = document.getElementById('mobile-button');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  mobileButton.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+    mobileMenu.classList.toggle('flex');
+  });
+
+  mobileMenu.addEventListener('click', () => {
+    mobileMenu.classList.add('hidden');
+    mobileMenu.classList.remove('flex');
+  });
+</script>
