fix: update image paths in index.html and add background image rule in output.css

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <!-- MENU  -->
     <header class="container flex items-center justify-between gap-8 py-8">
       <a href="./">
-        <img src="/img/forest.svg" alt="Forest" />
+        <img src="./img/forest.svg" alt="Forest" />
       </a>
       <nav
         id="mobile-menu"
@@ -96,13 +96,13 @@
         class="text-white pt-12 bg-gradient-to-t from-verde-950/80 px-4 pb-8 relative rounded-2xl overflow-hidden sm:pt-64 sm:px-8"
       >
         <!-- <img
-          src="/img/floresta.jpg"
+          src="./img/floresta.jpg"
           alt="Floresta"
           class="absolute inset-0 -z-10 size-full object-cover"
         /> -->
 
         <video
-          src="/img/video_chuva.mp4"
+          src="./img/video_chuva.mp4"
           class="absolute inset-0 -z-10 size-full object-cover animate-fade-in"
           id="video"
           width="1289"
@@ -118,7 +118,7 @@
         >
           <p>Vagas para dezembro abertas</p>
           <a href="#contato" class="btn inline-flex items-center gap-2"
-            >Reserve hoje <img src="/img/seta.svg" alt="Seta"
+            >Reserve hoje <img src="./img/seta.svg" alt="Seta"
           /></a>
         </div>
 
@@ -145,7 +145,7 @@
             <div class="flex items-center gap-4">
               <a href="/"
                 ><img
-                  src="/img/parceiros/wildbeast.svg"
+                  src="./img/parceiros/wildbeast.svg"
                   alt="Wildbeast logo"
                   class="w-28"
               /></a>
@@ -163,7 +163,7 @@
       class="radial-gradient container grid gap-8 pt-16 mb-12 sm:mb-16 lg:grid-cols-[2fr_3fr]"
     >
       <div
-        class="bg-[url('/img/padrao.svg')] bg-no-repeat bg-contain bg-left-bottom content-end"
+        class="bg-[url('./img/padrao.svg')] bg-no-repeat bg-contain bg-left-bottom content-end"
       >
         <h2 class="text-white mb-8 text-4xl font-serif lg:text-5xl">
           Refúgio Natural
@@ -187,7 +187,7 @@
       <div class="grid grid-cols-[2fr_1fr] gap-4 sm:gap-8">
         <div class="col-span-full relative">
           <img
-            src="/img/casa1.jpg"
+            src="./img/casa1.jpg"
             alt="Casa 1"
             class="h-52 w-full object-cover rounded-xl"
           />
@@ -200,7 +200,7 @@
         </div>
         <div class="grid *:col-start-1 *:row-start-1">
           <img
-            src="/img/casa2.jpg"
+            src="./img/casa2.jpg"
             alt="Casa 2"
             class="size-full object-cover rounded-xl"
           />
@@ -212,7 +212,7 @@
         </div>
         <div class="grid *:col-start-1 *:row-start-1">
           <img
-            src="/img/casa3.jpg"
+            src="./img/casa3.jpg"
             alt="Casa 3"
             class="size-full object-cover rounded-xl"
           />
@@ -355,7 +355,7 @@
       <div class="grid max-sm:grid-cols-1 grid-cols-2 gap-4">
         <div class="relative cursor-pointer overflow-hidden rounded-xl group">
           <img
-            src="/img/canoagem.jpg"
+            src="./img/canoagem.jpg"
             alt="Canoagem"
             class="size-full object-cover group-hover:scale-110 transition-all"
           />
@@ -369,7 +369,7 @@
           class="relative cursor-pointer overflow-hidden rounded-xl group sm:row-span-2"
         >
           <img
-            src="/img/observacao-noturna.jpg"
+            src="./img/observacao-noturna.jpg"
             alt="Observação Noturna"
             class="size-full object-cover group-hover:scale-110 transition-all"
           />
@@ -381,7 +381,7 @@
         </div>
         <div class="relative cursor-pointer overflow-hidden rounded-xl group">
           <img
-            src="/img/vida-selvagem.jpg"
+            src="./img/vida-selvagem.jpg"
             alt="Vida selvagem"
             class="size-full object-cover group-hover:scale-110 transition-all"
           />
@@ -395,7 +395,7 @@
     </section>
 
     <section
-      class="container mb-12 sm:mb-16 sm:py-16 bg-[url('/img/padrao.svg')] bg-contain bg-center bg-no-repeat"
+      class="container mb-12 sm:mb-16 sm:py-16 bg-[url('./img/padrao.svg')] bg-contain bg-center bg-no-repeat"
     >
       <p
         class="uppercase mb-4 text-start text-verde-200 tracking-widest text-sm"
@@ -414,7 +414,7 @@
           class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
         >
           <div class="neon size-10 flex items-center justify-center">
-            <img src="/img/manha.svg" alt="Amanhecer" class="" />
+            <img src="./img/manha.svg" alt="Amanhecer" class="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Amanhecer</h3>
           <p class="text-gray-300">
@@ -428,7 +428,7 @@
           class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:translate-y-12 sm:hover:translate-y-10 transition-transform"
         >
           <div class="neon size-10 flex items-center justify-center">
-            <img src="/img/dia.svg" alt="Amanhecer" class="" />
+            <img src="./img/dia.svg" alt="Amanhecer" class="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Meio-dia</h3>
           <p class="text-gray-300">
@@ -442,7 +442,7 @@
           class="bg-verde-900 grid gap-4 p-6 sm:p-8 rounded-xl flex-1 sm:hover:-translate-y-2 transition-transform"
         >
           <div class="neon size-10 flex items-center justify-center">
-            <img src="/img/noite.svg" alt="Amanhecer" class="" />
+            <img src="./img/noite.svg" alt="Amanhecer" class="" />
           </div>
           <h3 class="font-serif text-2xl text-white">Anoitecer</h3>
           <p class="text-gray-300">
@@ -539,31 +539,31 @@
         >
           <li>
             <img
-              src="/img/parceiros/caravan.svg"
+              src="./img/parceiros/caravan.svg"
               alt="Caravan"
               class="max-h-8"
             />
           </li>
           <li>
-            <img src="/img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
+            <img src="./img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
           </li>
           <li>
             <img
-              src="/img/parceiros/wildbeast.svg"
+              src="./img/parceiros/wildbeast.svg"
               alt="wildbeast"
               class="max-h-8"
             />
           </li>
           <li>
             <img
-              src="/img/parceiros/lescone.svg"
+              src="./img/parceiros/lescone.svg"
               alt="Lescone"
               class="max-h-8"
             />
           </li>
           <li>
             <img
-              src="/img/parceiros/surfbot.svg"
+              src="./img/parceiros/surfbot.svg"
               alt="Surfbot"
               class="max-h-8"
             />
@@ -576,31 +576,31 @@
         >
           <li>
             <img
-              src="/img/parceiros/caravan.svg"
+              src="./img/parceiros/caravan.svg"
               alt="Caravan"
               class="max-h-8"
             />
           </li>
           <li>
-            <img src="/img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
+            <img src="./img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
           </li>
           <li>
             <img
-              src="/img/parceiros/wildbeast.svg"
+              src="./img/parceiros/wildbeast.svg"
               alt="wildbeast"
               class="max-h-8"
             />
           </li>
           <li>
             <img
-              src="/img/parceiros/lescone.svg"
+              src="./img/parceiros/lescone.svg"
               alt="Lescone"
               class="max-h-8"
             />
           </li>
           <li>
             <img
-              src="/img/parceiros/surfbot.svg"
+              src="./img/parceiros/surfbot.svg"
               alt="Surfbot"
               class="max-h-8"
             />
@@ -613,31 +613,31 @@
         >
           <li>
             <img
-              src="/img/parceiros/caravan.svg"
+              src="./img/parceiros/caravan.svg"
               alt="Caravan"
               class="max-h-8"
             />
           </li>
           <li>
-            <img src="/img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
+            <img src="./img/parceiros/dogs.svg" alt="Dogs" class="max-h-8" />
           </li>
           <li>
             <img
-              src="/img/parceiros/wildbeast.svg"
+              src="./img/parceiros/wildbeast.svg"
               alt="wildbeast"
               class="max-h-8"
             />
           </li>
           <li>
             <img
-              src="/img/parceiros/lescone.svg"
+              src="./img/parceiros/lescone.svg"
               alt="Lescone"
               class="max-h-8"
             />
           </li>
           <li>
             <img
-              src="/img/parceiros/surfbot.svg"
+              src="./img/parceiros/surfbot.svg"
               alt="Surfbot"
               class="max-h-8"
             />
@@ -666,7 +666,7 @@
         </div>
 
         <div class="lg:justify-self-end">
-          <img src="/img/forest.svg" alt="Forest" class="mb-4" />
+          <img src="./img/forest.svg" alt="Forest" class="mb-4" />
           <p class="text-gray-300">Conecte-se com a natureza</p>
         </div>
       </div>
@@ -711,7 +711,7 @@
     })
     .replace('-feira', '');
 
-  video.src = random < 25 ? `/img/video_chuva.mp4` : `/img/video_sol.mp4`;
+  video.src = random < 25 ? `./img/video_chuva.mp4` : `./img/video_sol.mp4`;
 
   const mobileButton = document.getElementById('mobile-button');
   const mobileMenu = document.getElementById('mobile-menu');
